feat: 添加单元测试

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,11 @@
     "allowJs": true,
     "moduleResolution": "node"
   },
+  "ts-node": {
+    "moduleTypes": {
+      "jest.config.ts": "cjs"
+    },
+    "transpileOnly": true
+  },
   "files": ["src/index.ts"]
 }
