--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "常用工具包",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch",
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
@@ -24,7 +24,12 @@
   },
   "homepage": "https://github.com/yjk0510/utils#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.18.10",
+    "@types/jest": "^28.1.6",
     "@webpack-cli/generators": "^2.5.0",
+    "jest": "26",
+    "jest-environment-jsdom": "26",
+    "ts-jest": "26",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0",
