--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "常用工具包",
   "main": "dist/index.js",
   "scripts": {
-    "test": "jest --watch",
+    "test": "jest --watch --coverage",
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
