build: 限制发布目录

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/yjk0510/utils.git"
   },
+  "files": ["dist"],
   "keywords": [
     "util"
   ],
